--- a/src/view/home.css
+++ b/src/view/home.css
@@ -19,13 +19,13 @@
     color: white;
     font-size: 15pt;
     padding: 12px 0 0 8px;
-    font-family: "Times New Roman", serif;
+    font-family:  "fantasy";
 }
 .pagess{
     color: white;
     font-size: 15pt;
-    padding: 12px 0 0 150px;
-    font-family: "Times New Roman", serif;
+    padding: 12px 0 0 140px;
+    font-family:  "fantasy";
 }
 .logosname{
     height: 65px;
@@ -36,11 +36,10 @@
 }
 body{
     background-image: url("../image/4907157.jpg");
-    position:fixed;
+    position:absolute;
     background-size: cover;
 }
-.infor{
-    font-size: 20pt;
-    color: rgb(242, 111, 17) ;
-    font-family: "Times New Roman", serif;
+nav{
+    padding: 0;
+    margin: 0;
 }
