--- a/src/view/home.css
+++ b/src/view/home.css
@@ -1,9 +1,10 @@
 .brandlogo{
-    height: 80px;
-    width: 80px;
+    height: 60px;
+    width: 60px;
     border-radius: 50%;
     border: 3px solid;
     padding: 5 0 0 10px;
+    margin: 20px 0;
 }
 .li{
     padding: 0 0 0 200px;
@@ -12,31 +13,33 @@
     background-color: rgb(242, 111, 17);
     
     
-    height: 100px;
+    height: 80px;
+    padding: 20px;
+    margin: 0;
     
 }
 .pages{
     color: white;
     font-size: 15pt;
-    padding: 12px 0 0 8px;
+    margin: 25px 0 0 8px;
     font-family:  "fantasy";
 }
 .pagess{
     color: white;
     font-size: 15pt;
-    padding: 12px 0 0 140px;
+    margin: 25px 0 0 340px;
     font-family:  "fantasy";
 }
 .logosname{
-    height: 65px;
+    height: 50px;
    
     
     
-    padding: 10px 0 0 10px;
+    margin: 25px 0 0 0px;
 }
 body{
     background-image: url("../image/4907157.jpg");
-    position:absolute;
+    position:sticky;
     background-size: cover;
 }
 nav{
