--- a/src/view/inform.css
+++ b/src/view/inform.css
@@ -1,5 +1,5 @@
 p{
-    font-size: 40pt;
+    font-size: 30pt;
     color: rgb(242, 111, 17) ;
     font-family:"fantasy";
     text-align: center;
@@ -8,7 +8,7 @@ h1{
     font-size: 18pt;
     font-family: "fantasy;";
     text-align: center;
-    padding: 50px 50px;
+    padding: 10px 50px;
 }
 button{
     height: 70px;
@@ -16,7 +16,7 @@ button{
     background-color: rgb(242, 111, 17)  ;
     border: 8px double white;
     border-radius: 50px;
-    margin: 30px 42%;
+    margin: 30px 43%;
     color: white;
     font-size: 14pt;
 }
@@ -24,7 +24,44 @@ hr{
     text-align: center;
     width: 520px;
     border: 4px solid rgb(243, 120, 32);
-    margin: 0 500px;
+    margin: 0 575px;
     opacity: 1;
     border-radius: 50px;
+}
+h2{
+    padding: 10px 540px;
+}
+.pic{
+    height: auto;
+    width: 100%;
+    margin: 50px 0 ;
+}
+.pics{
+    height: auto;
+    width: 90%;
+    margin: 5px 0 5px 90px;
+}
+.manecard{
+    display: flex;
+    justify-content: space-evenly;
+    height: 230px;
+    width: 100%;
+    margin: 5px 0 5px 0px;
+    
+}
+.card{
+    height: auto;
+    width: 280px;
+    box-shadow: 1px 1px 1px 1px gray;
+    margin: 30px 0;
+}
+.side{
+    height: 550px;
+    width: 100%;
+}
+.manecards{
+    display: flex;
+    height: auto;
+    width: 100%;
+
 }
