--- a/src/view/inform.css
+++ b/src/view/inform.css
@@ -73,7 +73,7 @@ h2{
     height: auto;
     width: 100%;
     background-color: white;
-    padding: 40px 0 0 0;
+    padding: 40px 0 ;
 }
 ul{
     color:rgb(243, 120, 32);
