--- a/src/component/Contact/Contact.css
+++ b/src/component/Contact/Contact.css
@@ -18,6 +18,7 @@ h3{
    color: rgb(249 115 22);
 }
 .row{
+    background-color: white;
     color: rgb(59, 57, 57);
     font-family:tahoma;
     box-shadow: 0px 0px 2px 1px grey ;
@@ -64,8 +65,13 @@ label{
     border-radius: 50%;
 }
 .Mailb{
+    background-color: white;
     box-shadow: 0px 0px 2px 1px grey ;
     margin: 30px 110px;
     padding: 30px;
     text-align: center;
+}
+.mailid{
+    margin: 0px 30px;
+
 }
