--- a/src/view/home.css
+++ b/src/view/home.css
@@ -20,14 +20,14 @@
 }
 .pages{
     color: white;
-    font-size: 13pt;
+    font-size: 12pt;
     margin: 25px 0 0 4px;
     font-family: Verdana, Arial, Helvetica, sans-serif;
 }
 .pagess{
     color: white;
-    font-size: 13pt;
-    margin: 25px 0 0 250px;
+    font-size: 12pt;
+    margin: 25px 0 0 150px;
     font-family: Verdana, Arial, Helvetica, sans-serif;
 }
 .logosname{
@@ -38,7 +38,7 @@
     margin: 25px 0 0 0px;
 }
 body{
-    background-image: url("../image/4907157.jpg");
+    /* background-image: url("../image/4907157.jpg"); */
     position:sticky;
     background-size: cover;
 }
@@ -46,4 +46,5 @@ nav{
     padding: 0;
     margin: 0;
     z-index: top 0;
+    height: 100px;
 }
